# data-quality

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  tox.ini
assets/: configs.json  html_report.html  metadado.xlsx  path_config.json  report_template.html
dataset/: house_price_prep.csv
notebooks/: prepare.ipynb  quality_logs.ipynb  quality_report.ipynb  validator.ipynb
quality/: app.py  prepare.ipynb  prepare.py  quality_logs.ipynb  quality_report.ipynb  validator.ipynb  validator.py
src/: prepare.py  validator.py
tests/: quality_test.py
