[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "quality"
authors = [
    {name = "Carolina Zambelli", email = "carolina_zambelli@example.com"}
]
description = "package for data quality validations"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "quality"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}